--- a/product-manager.html
+++ b/product-manager.html
@@ -40,6 +40,30 @@
   
     <div class="container">
 <!--Begin body here --> 
+<h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qHV9Vfwq&k=Job&j=ouNPafw0&__jvst=Employee+Referral&__jvsd=shUBLhwj&__jvsc=Twitter&bid=n197oMwW'>Jobvite, Inc. Careers - Senior AI Product Manager</a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>Posted on:: 2019-10-30</p>
+<hr/>
+<h5><a href='https://jobs.crelate.com/portal/huntergibbons/job/1tcdejbmpjfsd8op7g8jhjnyxc'>Technical Product Manager | Hunter Gibbons Career Portal</a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>Posted on: 2019-10-30</p>
+<hr/>
+<h5><a href='https://cardtronics.hiringthing.com/job/156897/director-global-software-product-manager'>Director, Global Software Product Manager @ Cardtronics</a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>Posted on:: 2019-10-30</p>
+<hr/>
+<h5><a href='https://jobs.jobvite.com/splunk/job/obkobfwO'>Splunk Careers - Product Manager - Machine Learning Content</a></h5> 
+<p><span class="badge badge-light">San Francisco, California</span></p>
+<p>Posted on: 2019-10-30</p>
+<hr/>
+<h5><a href='https://jobs.jobvite.com/splunk/job/oqjrbfw5'>Splunk Careers - Senior Product Manager/Product Manager - Developer Programs</a></h5> 
+<p><span class="badge badge-light">San Francisco, California</span></p>
+<p>Posted on: 2019-10-30</p>
+<hr/>
+<h5><a href='https://jobs.lever.co/babylonhealth/746c734a-7eb1-4f16-977c-cbd2330dd6c6'>Babylon Health - Product Designer - Health Management</a></h5> 
+<p><span class="badge badge-light">UK - London</span></p>
+<p>Posted on: 2019-10-30</p>
+<hr/>
 <h5><a href='https://jobs.smartrecruiters.com/TheRIIMLLC/743999698526774-payment-product-manager'>TheRIIM LLC Payment Product Manager | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Bellevue Bellevue, WA</span></p>
 <p>Posted on: 2019-10-30</p>
@@ -94,7 +118,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://stackpath.applytojob.com/apply/OmzSVoLkum/Edge-Services-Product-Manager'>Edge Services - Product Manager - StackPath - Career Page</a></h5> 
+<h5><a href='http://stackpath.applytojob.com/apply/OmzSVoLkum/Edge-Services-Product-Manager'>Edge Services - Product Manager - StackPath - Career Page</a></h5> 
 <p><span class="badge badge-light">Dallas, TX</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
@@ -122,11 +146,11 @@
 <p><span class="badge badge-light">Raleigh, North Carolina</span></p>
 <p>Posted on:: 2019-10-30</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://frequence.applytojob.com/apply/vuhW5zROED/Product-Manager'>Product Manager - Frequence - Career Page</a></h5> 
+<h5><a href='http://frequence.applytojob.com/apply/vuhW5zROED/Product-Manager'>Product Manager - Frequence - Career Page</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/Optimizely/743999698505140-principal-product-manager-data-platform-and-analytics'>Optimizely Principal Product Manager, Data Platform and Analytics | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/Optimizely/743999698505140-principal-product-manager-data-platform-and-analytics'>Optimizely Principal Product Manager, Data Platform and Analytics | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">San Francisco, CA, USA</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
@@ -134,7 +158,7 @@
 <p><span class="badge badge-light">London  London  London London  London  London</span></p>
 <p>Posted on:: 2019-10-30</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/careers/service/redirect?c=qRIaVfwo&k=Job&j=oPcsbfwo&__jvst=Employee&__jvsd=sU0JUhwj&__jvsc=Jobvite&bid=ndJAoMwb'>Justice Digital and Technology Careers - Senior Product Manager, London</a></h5> 
+<h5><a href='https://jobs.jobvite.com/careers/service/redirect?c=qRIaVfwo&k=Job&j=oPcsbfwo&__jvst=Employee&__jvsd=sU0JUhwj&__jvsc=Jobvite&bid=ndJAoMwb'>Justice Digital and Technology Careers - Senior Product Manager, London</a></h5> 
 <p><span class="badge badge-light">London  London  London London  London  London</span></p>
 <p>Posted on:: 2019-10-30</p>
 <hr/>
@@ -166,7 +190,7 @@
 <p><span class="badge badge-light">Salt Lake City, Utah</span></p>
 <p>Posted on:: 2019-10-30</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://dribbble.com/jobs/25319-Product-Designer?source=feed'>
+<h5><a href='https://dribbble.com/jobs/25319-Product-Designer?source=feed'>
       Product Designer at Underbelly - Salt Lake City, Utah - Dribbble Design Jobs
   </a></h5> 
 <p><span class="badge badge-light">Salt Lake City, Utah</span></p>
@@ -192,7 +216,7 @@
 <p><span class="badge badge-light">San Francisco, CA</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<h5><a href='https://jobs.jobvite.com/sugarcrm/job/ocBnbfw5'>SugarCRM Careers - Senior Product Manager, Cloud Platform</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/sugarcrm/job/ocBnbfw5'>SugarCRM Careers - Senior Product Manager, Cloud Platform</a></h5> 
 <p><span class="badge badge-light">Cupertino, CANorth Carolina</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
@@ -212,11 +236,11 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/VONQ/743999698459208-product-owner-business-process'>VONQ Product Owner Business Process | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/VONQ/743999698459208-product-owner-business-process'>VONQ Product Owner Business Process | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Rotterdam Rotterdam</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/Allegro/743999698460929-international-sellers-product-manager'>Allegro International Sellers Product Manager | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/Allegro/743999698460929-international-sellers-product-manager'>Allegro International Sellers Product Manager | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
@@ -340,11 +364,11 @@ position reports to: Sr Manager of Product Management, Platform BU.</p>
 <p><span class="badge badge-light">Vancouver, BC  Canada</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/hunterdouglas/job/o0z1afwu'>Hunter Douglas Inc. Careers - Associate Product Manager</a></h5> 
+<h5><a href='https://jobs.jobvite.com/hunterdouglas/job/o0z1afwu'>Hunter Douglas Inc. Careers - Associate Product Manager</a></h5> 
 <p><span class="badge badge-light">North America</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://dito.recruiterbox.com/jobs/fk03dsj'>
+<h5><a href='http://dito.recruiterbox.com/jobs/fk03dsj'>
     Product Designer S?nior at Dito
 </a></h5> 
 <p><span class="badge badge-light"></span></p>
@@ -382,7 +406,7 @@ position reports to: Sr Manager of Product Management, Platform BU.</p>
 <p><span class="badge badge-light">Madison, Wisconsin  Madison, Wisconsin</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://benefits-data-trust.breezy.hr/p/416668734da5-product-manager'>Product Manager at Benefits Data Trust</a></h5> 
+<h5><a href='https://benefits-data-trust.breezy.hr/p/416668734da5-product-manager'>Product Manager at Benefits Data Trust</a></h5> 
 <p><span class="badge badge-light">Philadelphia, PA</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
@@ -408,7 +432,7 @@ position reports to: Sr Manager of Product Management, Platform BU.</p>
 <p><span class="badge badge-light">London</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/grandrounds/d4e1a4d8-db9d-46f7-8f1c-bc2344911c7c'>Grand Rounds - Senior Product Manager, Data Products</a></h5> 
+<h5><a href='https://jobs.lever.co/grandrounds/d4e1a4d8-db9d-46f7-8f1c-bc2344911c7c'>Grand Rounds - Senior Product Manager, Data Products</a></h5> 
 <p><span class="badge badge-light">San Francisco, CA</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
@@ -433,31 +457,6 @@ position reports to: Sr Manager of Product Management, Platform BU.</p>
 <h5><a href='https://jobs.lever.co/palantir/a95f4ce6-c525-466a-b30c-2e4610314be0'>Palantir Technologies - People Systems Product Manager</a></h5> 
 <p><span class="badge badge-light">Palo Alto, CA</span></p>
 <p>Posted on: 2019-10-29</p>
-<hr/>
-<h5><a href='https://jobs.smartrecruiters.com/Omio1/743999696601066-senior-product-manager-coverage-tribe-m-f-d-'>Omio Senior Product Manager Coverage Tribe (m / f / d) | SmartRecruiters</a></h5> 
-<p><span class="badge badge-light">Berlin, Germany</span></p>
-<p>Posted on: 2019-10-29</p>
-<hr/>
-<h5><a href='https://boards.greenhouse.io/freshbooks/jobs/1937477'>Job Application for Product Manager, Cloud Accounting Ecosystem at FreshBooks</a></h5> 
-<p><span class="badge badge-light">Toronto, ON</span></p>
-<p>Posted on: 2019-10-29</p>
-<hr/>
-<h5><a href='http://jobs.jobvite.com/newrelic/job/oGbrbfwd'>New Relic Careers - Field Product Manager - Telemetry Platform</a></h5> 
-<p><span class="badge badge-light">Portland, Oregon  San Francisco, California  Portland, OR</span></p>
-<p>Posted on: 2019-10-29</p>
-<hr/>
-<h5><a href='https://kfzteile24.join.com/jobs/461376-senior-product-manager-owner-e-commerce-w-m-d'>Job @ kfzteile24 (Berlin): Senior Product Manager ... | JOIN</a></h5> 
-<p><span class="badge badge-light">Berlin Berlin, Deutschland</span></p>
-<p>Posted on: 2019-10-29</p>
-<hr/>
-<h5><a href='https://jobs.jobvite.com/csi360/job/oNOkbfwQ'>Cardiovascular Systems, Inc. Careers - IT Product Manager ...</a></h5> 
-<p><span class="badge badge-light"></span></p>
-<p>Oct 17, 2019 ... ... supervisory or team leader experience for enterprise systems; Experience with 
-online education programs and Physician customer relationship management?...</p>
-<hr/>
-<h5><a href='https://jobs.jobvite.com/careers/service/redirect?c=q4d9Vfw5&k=Job&j=ooYSafw8&__jvst=Employee+Referral&__jvsd=sP4ZmfwY&__jvsc=Twitter&bid=n1VKnMwk'>ServiceNow Careers - Staff Product Manager, Digital Talent Experiences - Core HCM</a></h5> 
-<p><span class="badge badge-light">Santa Clara, California  San Diego, California  Santa Clara, CASan Diego, CA</span></p>
-<p>Posted on:: 2019-10-29</p>
 <hr/>
 
 
